<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/blue"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padTable"
        android:paddingBottom="@dimen/padTable">

        <TextView
            android:id="@+id/col_date"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/col_date" />

        <TextView
            android:id="@+id/col_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/col_name" />

        <TextView
            android:id="@+id/col_price"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/col_price" />

    </LinearLayout>

</LinearLayout>